Fixed the alignment of the bigquery table attributes.

--- a/style/dpms.css
+++ b/style/dpms.css
@@ -135,6 +135,18 @@
   margin-left: 5px;
 }
 
+.dataset-tree
+  div[role='treeitem'][aria-level='4']
+> div:first-child{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+ 
+.dataset-tree div[role='treeitem'][aria-level='4'] > div > div:nth-last-child(2){
+  width: 50%;
+}
+
 .db-icon {
   pointer-events: none;
 }
